--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,6 @@
 </div>
 <script>
 
-
     var show_transactions = function(account_id, account_name){
         $("#transactions-list > .spinner").show();
         $("#transactions-list > .title").html("<h3>Transactions: " + account_name + "</h3>");
@@ -44,7 +43,7 @@
 
             for(var i = 0; i < result.transactions.length; i++){
                 var transaction = result.transactions[i];
-                $("#transactions-list > .container").append("<div class='transaction' data-id='" + transaction.id + "'><div class='date'>" + transaction.date.substring(0, 10) + "</div><div class='text'>" + transaction.text + "</div><div class='amount'>" + transaction.currency + " " + transaction.amount.toLocaleString(undefined, { minimumFractionDigits: 2 }) + "</div></div");
+                $("#transactions-list > .container").append("<div class='transaction' data-id='" + transaction.id + "'><div class='date'>" + transaction.date.substring(0, 10) + "</div><div class='text'>" + transaction.text + "</div><div class='amount'>" + transaction.amount.currency + " " + transaction.amount.value.toLocaleString(undefined, { minimumFractionDigits: 2 }) + "</div></div");
             }
         });
     }
@@ -58,7 +57,7 @@
 
             for(var i = 0; i < result.accounts.length; i++){
                 var account = result.accounts[i];
-                $("#account-list > .container").append("<div class='account' data-name='" + account.name + "' data-id='" + account.id + "'><div class='name'>" + account.name + "</div><div class='balance'>" + account.currency + " " + account.bookedBalance.toLocaleString(undefined, { minimumFractionDigits: 2 }) + "</div></div");
+                $("#account-list > .container").append("<div class='account' data-name='" + account.name + "' data-id='" + account.id + "'><div class='name'>" + account.name + "</div><div class='balance'>" + account.bookedBalance.currency + " " + account.bookedBalance.value.toLocaleString(undefined, { minimumFractionDigits: 2 }) + "</div></div");
             }
 
             $(".account").click(function(){
