Convert "Fetch more transactions" to a button

--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
     <!-- spinner -->
     <div class="lds-ellipsis spinner" style="display: none"><div></div><div></div><div></div><div></div></div>
     <div class="container"></div>
-    <div id="paging_link" style="display: none">Fetch more transactions</div>
+    <button id="paging_link" style="display: none">Fetch more transactions</button>
 </div>
 <script>
 
