Made available for categorizations

--- a/templates/base.html
+++ b/templates/base.html
@@ -44,6 +44,13 @@
 
         }
 
+        .account .categorize {
+            width: 200px;
+            display: inline-block;
+            text-align: right;
+
+        }
+
         #transactions-list {
             margin-top: 30px;
         }
