--- a/templates/index.html
+++ b/templates/index.html
@@ -15,6 +15,7 @@
 
 <ul>
     <li><a href="/info">Technical information</a></li>
+    <li><a href="/dump/categorization">Dump Categorization</a></li>
     <li><a href="/auth/logout">Log out</a></li>
 </ul>
 
